--- a/package.json
+++ b/package.json
@@ -2,9 +2,34 @@
   "name": "knit-it",
   "version": "0.0.1",
   "description": "knit designer and visualizer",
-  "main": "index.js",
+  "main": "src/index.tsx",
   "repository": "git@github.com:JonasWard/knit-it.git",
   "author": "JonasWard <jonas.vandenbulcke@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@babylonjs/core": "^5.33.1",
+    "@babylonjs/gui": "^5.33.1",
+    "react": "^18.2.0",
+    "react-babylonjs": "^3.1.13",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "typescript": "^4.9.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
